@@ -9,7 +9,9 @@
 \newcommand{\isabellecontext}{UNKNOWN}
 
 \newcommand{\isastyle}{\UNDEF}
+\newcommand{\isastylett}{\UNDEF}
 \newcommand{\isastyleminor}{\UNDEF}
+\newcommand{\isastyleminortt}{\UNDEF}
 \newcommand{\isastylescript}{\UNDEF}
 \newcommand{\isastyletext}{\normalsize\rm}
 \newcommand{\isastyletxt}{\rm}
@@ -46,11 +48,22 @@
 \isa@parskip\parskip\parskip0pt%
 \isaspacing\isastyle}{\par}
 
+\newenvironment{isabellebodytt}{%
+\isamarkuptrue\par%
+\isa@parindent\parindent\parindent0pt%
+\isa@parskip\parskip\parskip0pt%
+\isaspacing\isastylett}{\par}
+
 \newenvironment{isabelle}
 {\begin{trivlist}\begin{isabellebody}\item\relax}
 {\end{isabellebody}\end{trivlist}}
 
+\newenvironment{isabellett}
+{\begin{trivlist}\begin{isabellebodytt}\item\relax}
+{\end{isabellebodytt}\end{trivlist}}
+
 \newcommand{\isa}[1]{\emph{\isaspacing\isastyleminor #1}}
+\newcommand{\isatt}[1]{\emph{\isaspacing\isastyleminortt #1}}
 
 \newcommand{\isaindent}[1]{\hphantom{#1}}
 \newcommand{\isanewline}{\mbox{}\par\mbox{}}
@@ -133,7 +146,9 @@
 
 \newcommand{\isabellestyledefault}{%
 \def\isastyle{\small\tt\slshape}%
+\def\isastylett{\small\tt}%
 \def\isastyleminor{\small\tt\slshape}%
+\def\isastyleminortt{\small\tt}%
 \def\isastylescript{\footnotesize\tt\slshape}%
 \isachardefaults%
 }
@@ -141,14 +156,18 @@
 
 \newcommand{\isabellestylett}{%
 \def\isastyle{\small\tt}%
+\def\isastylett{\small\tt}%
 \def\isastyleminor{\small\tt}%
+\def\isastyleminortt{\small\tt}%
 \def\isastylescript{\footnotesize\tt}%
 \isachardefaults%
 }
 
 \newcommand{\isabellestyleit}{%
 \def\isastyle{\small\it}%
+\def\isastylett{\small\tt}%
 \def\isastyleminor{\it}%
+\def\isastyleminortt{\tt}%
 \def\isastylescript{\footnotesize\it}%
 \isachardefaults%
 \def\isacharunderscorekeyword{\mbox{-}}%
@@ -206,7 +225,9 @@
 \newcommand{\isabellestylesl}{%
 \isabellestyleit%
 \def\isastyle{\small\sl}%
+\def\isastylett{\small\tt}%
 \def\isastyleminor{\sl}%
+\def\isastyleminortt{\tt}%
 \def\isastylescript{\footnotesize\sl}%
 }
 
